--- a/public/index.html
+++ b/public/index.html
@@ -1,24 +1,38 @@
 <!DOCTYPE html>
-<!-- HTML5 Hello world by kirupa - http://www.kirupa.com/html5/getting_your_feet_wet_html5_pg1.htm -->
 <html lang="en-us">
 
 <head>
-<meta charset="utf-8">
-<title>Hello...</title>
-//bootstrap
-<style type="text/css" href=""></style>
+    <meta charset="utf-8">
+    <title>Updeload a file</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="stylesheet.css">
 
 </head>
 
 <body>
-<div id="mainContent">
-<p id="helloText">?</p>
-<button id="clickButton" class="buttonStyle">click me</button>
-</div>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-xs-6 col-xs-offset-3">
+                <form method="post" enctype="multipart/form-data">
+                    <div class="form-group">
+                        <label for="uploadedFile">File input</label>
+                        <input type="file" name="uploadedFile">
+                        <p class="help-block">Submit a file to view its filesize.</p>
+                    </div>
+                    <button type="submit" class="btn btn-default">Submit</button>
+                </form>
+            </div>
+        </div>
+
+    </div>
 
 
-<script //need to load some jquery></script>
-<script>//need to load my own javascript</script>
+
+
+
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
+    <script src="script.js"></script>
 
 </body>
+
 </html>
